language/tools/move-cli/tests/testsuite/verify_native_functions_in_publish/args.exp
Command `sandbox publish src/example.move`:
error[E02007]: invalid 'fun' declaration
  ┌─ src/example.move:3:16
  │
3 │     native fun create_nothing();
  │                ^^^^^^^^^^^^^^ Missing implementation for the native function M::create_nothing

